More element and transition

--- a/index.html
+++ b/index.html
@@ -122,9 +122,18 @@
         <div class="container">
           <h2>What we do</h2>
           <div class="third-section-flex">
-            <img src="images\laptop.jpg" alt="Laptop apps" width="370px" height="294px" />
-            <img src="images\mobile.jpg" alt="Mobile apps" width="370px" height="294px" />
-            <img src="images\tableta.jpg" alt="Tablet apps" width="370px" height="294px" />
+            <div class="thumb">
+              <img src="images\laptop.jpg" alt="Laptop apps" width="370px" height="294px" />
+              <p class="label">DESKTOP APPS</p>
+            </div>
+            <div class="thumb">
+              <img src="images\mobile.jpg" alt="Mobile apps" width="370px" height="294px" />
+              <p class="label">Mobile APPS</p>
+            </div>
+            <div class="thumb">
+              <img src="images\tableta.jpg" alt="Tablet apps" width="370px" height="294px" />
+              <p class="label">DESIGN SOLUTIONS</p>
+            </div>
           </div>
         </div>
       </section>
