--- a/portfolio.html
+++ b/portfolio.html
@@ -69,6 +69,10 @@
           <ul class="category-flex">
             <li>
               <img src="./images/portfolio/laptop.jpg" alt="Laptop image" width="370px" />
+              <div class="portfolio-label">
+                Technoduck is a state-of-the-art coronavirus distribution platform. Companies use
+                this platform for digital espionage and attacks on competitors' secure servers.
+              </div>
               <div class="filter-item">
                 <p>Technoduck</p>
                 <em>Web-site</em>
@@ -80,6 +84,11 @@
                 alt="Poster New Orlean vs Golden Star"
                 width="370px"
               />
+              <div class="portfolio-label">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste esse delectus,
+                obcaecati debitis explicabo cum corrupti, a laboriosam unde officiis voluptate
+                aliquam suscipit eveniet aliquid natus velit accusamus sequi quo.
+              </div>
               <div class="filter-item">
                 <p>Poster New Orlean vs Golden Star</p>
                 <em>Design</em>
@@ -91,6 +100,11 @@
                 alt="Seafood Restaurant Logo"
                 width="370px"
               />
+              <div class="portfolio-label">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis voluptas quas
+                aperiam facere aut laboriosam unde sit fuga repellat, incidunt hic, corrupti eum
+                perspiciatis sapiente accusantium deleniti repellendus quia modi?
+              </div>
               <div class="filter-item">
                 <p>Seafood Restaurant</p>
                 <em>Apps</em>
@@ -98,6 +112,11 @@
             </li>
             <li>
               <img src="./images/portfolio/headphones.jpg" alt="Headphone image" width="370px" />
+              <div class="portfolio-label">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste esse delectus,
+                obcaecati debitis explicabo cum corrupti, a laboriosam unde officiis voluptate
+                aliquam suscipit eveniet aliquid natus velit accusamus sequi quo.
+              </div>
               <div class="filter-item">
                 <p>Project Prime</p>
                 <em>Marketing</em>
@@ -105,6 +124,11 @@
             </li>
             <li>
               <img src="./images/portfolio/box.jpg" alt="Two Boxes image" width="370px" />
+              <div class="portfolio-label">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste esse delectus,
+                obcaecati debitis explicabo cum corrupti, a laboriosam unde officiis voluptate
+                aliquam suscipit eveniet aliquid natus velit accusamus sequi quo.
+              </div>
               <div class="filter-item">
                 <p>Project Boxes</p>
                 <em>Apps</em>
@@ -112,6 +136,11 @@
             </li>
             <li>
               <img src="./images/portfolio/computer.jpg" alt="Computer image" width="370px" />
+              <div class="portfolio-label">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste esse delectus,
+                obcaecati debitis explicabo cum corrupti, a laboriosam unde officiis voluptate
+                aliquam suscipit eveniet aliquid natus velit accusamus sequi quo.
+              </div>
               <div class="filter-item">
                 <p>Inspiration has no Borders</p>
                 <em>Web-site</em>
@@ -119,6 +148,11 @@
             </li>
             <li class="last-li">
               <img src="./images/portfolio/book.jpg" alt="a Book image" width="370px" />
+              <div class="portfolio-label">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste esse delectus,
+                obcaecati debitis explicabo cum corrupti, a laboriosam unde officiis voluptate
+                aliquam suscipit eveniet aliquid natus velit accusamus sequi quo.
+              </div>
               <div class="filter-item">
                 <p>Limited Edition</p>
                 <em>Design</em>
@@ -126,6 +160,11 @@
             </li>
             <li>
               <img src="./images/portfolio/letters.jpg" alt="Label image" width="370px" />
+              <div class="portfolio-label">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste esse delectus,
+                obcaecati debitis explicabo cum corrupti, a laboriosam unde officiis voluptate
+                aliquam suscipit eveniet aliquid natus velit accusamus sequi quo.
+              </div>
               <div class="filter-item">
                 <p>Project LAB</p>
                 <em>Marketing</em>
@@ -133,6 +172,11 @@
             </li>
             <li>
               <img src="./images/portfolio/tablet.jpg" alt="Table with keyboard image" />
+              <div class="portfolio-label">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste esse delectus,
+                obcaecati debitis explicabo cum corrupti, a laboriosam unde officiis voluptate
+                aliquam suscipit eveniet aliquid natus velit accusamus sequi quo.
+              </div>
               <div class="filter-item">
                 <p>Growing Business</p>
                 <em>Apps</em>
